# cosmos-client-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
canonical_proto/: Cargo.toml
canonical_proto/src/: lib.rs
cosmos_prost_client/: Cargo.toml
cosmos_prost_client/src/: lib.rs
cosmos_prost_types/: Cargo.toml  build.rs
cosmos_prost_types/src/: lib.rs
cosmos_sdk_client/: Cargo.toml  build.rs
cosmos_sdk_client/src/: lib.rs
