[package]
name = "cosmos_prost_client"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmos_prost_types = { path = "../cosmos_prost_types", version = "0.1.0" }
secp256k1 = "0.17.2"
prost = "0.6.1"
