[package]
name = "cosmos_sdk_client"
version = "0.1.0"
authors = ["Aaron Craelius <aaronc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
prost-types = "0.6.1"

[build-dependencies]
tonic-build = "0.2.0"
